Some Files updating

--- a/index.css
+++ b/index.css
@@ -7,6 +7,17 @@
 body {
     position: relative;
 }
+body::-webkit-scrollbar {
+    background: rgb(0,92,89);
+    width: 5px;
+}
+body::-webkit-scrollbar-thumb {
+    background: blue;
+    border: 1px solid gold;
+}
+.txt {
+    color: azure;
+}
 .container {
     position: relative;
     max-width: 100%;
@@ -19,17 +30,28 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: darkgreen;
+    background-color: rgb(0,92,89);
 }
 .header i {
     font-size: 24px;
+    cursor: pointer;
+    -webkit-text-stroke: 1px olive;
+    text-shadow: 0 0 8px azure;
 }
 .header p {
     font-size: 28px;
     letter-spacing: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .header b {
-    font-family:"Monotype Corsiva";
+    font-family:"Corsiva";
+}
+.header p img {
+    position: relative;
+    width: 50px;
+    height: 50px;
 }
 .header .configuration {
     width: 150px;
@@ -39,12 +61,15 @@ body {
     list-style: none;
     transform: rotate(90deg);
     transform-origin: top right;
-    background: forestgreen;
+    background: rgb(0,92,89);
     padding: 5px;
+    color: azure;
 }
 .header .configuration li {
-    border-bottom: 1px solid lime;
     font-size: 16px;
+    font-family: "Corsiva";
+    margin-top: 18px;
+    border-bottom: 1px solid lime;
 }
 .header .configuration li:first-child {
     border-bottom: 1px solid silver;
@@ -71,13 +96,13 @@ body {
     }
 }
 .aside {
-    position: absolute;
+    position: fixed;
     padding: 5px 2px 5px 2px;
     top: 0;
-    left: -165px;
-    width: 165px;
+    left: -180px;
+    width: 180px;
     min-height: 100vh;
-    background: forestgreen;
+    background: rgb(0,92,89);
     transition: 1s;
 }
 .aside.left-to-rigth {
@@ -92,7 +117,7 @@ body {
     font-size: 26px;
     font-weight: 700;
     color: red;
-    -webkit-text-stroke: 1px forestgreen;
+    -webkit-text-stroke: 1px rgb(0,92,89);
     margin-bottom: 3px;
     padding: 8px;
 }
@@ -102,7 +127,8 @@ body {
     list-style: none;
 }
 .aside ul li {
-    font-family: "Monotype Corsiva";
+    cursor: pointer;
+    font-family: "Corsiva";
     margin-top: 18px;
     font-size: 20px;
     border-bottom: 1px solid lime;
@@ -112,20 +138,29 @@ body {
     font-size: 26px;
     font-weight: 700;
     color: red;
-    -webkit-text-stroke: 1px forestgreen;
+    -webkit-text-stroke: 1px rgb(0,92,89);
     margin-bottom: 3px;
     padding: 8px;
 }
 
 .aside2 {
-    position: absolute;
+    position: fixed;
     padding: 5px 2px 5px 2px;
     top: 0;
-    right: -165px;
-    width: 165px;
-    min-height: 100vh;
-    background: forestgreen;
+    right: -180px;
+    width: 180px;
+    height: 100vh;
+    background: rgb(0,92,89);
     transition: 1s;
+    overflow: auto;
+}
+.aside2::-webkit-scrollbar {
+    background: rgb(0,92,89);
+    width: 5px;
+}
+.aside2::-webkit-scrollbar-thumb {
+    background: red;
+    /* border: 1px solid gold; */
 }
 .aside2.rigth-to-left {
     transition: 1s;
@@ -141,24 +176,54 @@ body {
     list-style: none;
 }
 .aside2 ul li {
-    font-family: "Monotype Corsiva";
+    font-family: "Corsiva";
     margin-top: 18px;
     font-size: 20px;
+    cursor: pointer;
     border-bottom: 1px solid lime;
 }
-.aside2 i {
+.aside2 #close2 {
     font-size: 26px;
     font-weight: 700;
     color: red;
     -webkit-text-stroke: 1px forestgreen;
     margin-bottom: 3px;
     padding: 8px;
+    cursor: pointer;
+}
+#open {
+    margin-right: 15px;
+    font-size: 24px;
+    color: azure;
+    -webkit-text-stroke: 1px olive;
+    text-shadow: 0 0 8px azure;
+    display: none;
+    cursor: pointer;
+}
+.section {
+    font-weight: 700;
+    padding: 15px;
+    background: rgb(249,238,216);
+    min-height: calc(100vh - 46px);
+    /* line-height: 25px; */
+    letter-spacing: 1px;
+    font-size: 18px;
+}
+.dayContext {
+    width: 310px;
+    padding: 8px;
+    background: rgb(249,238,216);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .moon {
-    background: #000016 !important;
+    background: #1e2831 !important;
     color: azure !important;
 }
 
-@media screen and (min-width: 458px){
+
+@media screen and (max-width: 458px){
     
 }
